Modified index file

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8"/>
 	<link rel="stylesheet" href="css/reset.css">
@@ -10,74 +10,76 @@
 </head>
 <body>
 
-<div class="wrap container_12"> 
-	<header class="clearfix">
-		<h1 class="grid_8">HTML CSS Tutorials</h1>
-		<nav class="grid_4">
-			<ul>
-				<li><a href="#">Home</a></li>
-				<li><a href="#">About</a></li>
-				<li><a href="#">Contact</a></li>
-			</ul>
-		</nav>
-	</header>
-	<div class="main container_12">
-		<section class="intro">
-			<h2>HTML Introduction</h2>
-			<p>HTML stands for Hyper Text Markup Language<br>
-			HTML describes the structure of Web pages using markup<br>
-			HTML elements are the building blocks of HTML pages<br>
-			HTML elements are represented by tags<br>
-			HTML tags label pieces of content such as "heading", "paragraph", "table" <br>
-			Browsers do not display the HTML tags, but use them to render the content of the page<br></p>
+	<div class="wrap container_12"> 
+		<header class="clearfix">
+			<h1 class="grid_8">HTML CSS Tutorials</h1>
+			<nav class="grid_4">
+				<ul>
+					<li><a href="#">Home</a></li>
+					<li><a href="#">About</a></li>
+					<li><a href="#">Contact</a></li>
+				</ul>
+			</nav>
+		</header><!--end header-->
+		<div class="main container_12">
+			<section class="intro">
+				<h2>HTML Introduction</h2>
+				<p>HTML stands for Hyper Text Markup Language<br>
+					HTML describes the structure of Web pages using markup<br>
+					HTML elements are the building blocks of HTML pages<br>
+					HTML elements are represented by tags<br>
+					HTML tags label pieces of content such as "heading", "paragraph", "table" <br>
+					Browsers do not display the HTML tags, but use them to render the content of the page<br></p>
 
-		</section>
+				</section>
 
-	</div>
+				<div class="main container_12">
+					<div class="primary grid_5">
+						<section class grid_2>
+							<h3>Styling HTML with CSS</h3>
+							<p>CSS stands for Cascading Style Sheets.<br>
+								CSS describes how HTML elements are to be displayed on screen, paper, or in other media.<br>
+								CSS saves a lot of work. It can control the layout of multiple web pages all at once.<br>
+								CSS can be added to HTML elements in 3 ways:<br>
+								Inline - by using the style attribute in HTML elements<br>
+								Internal - by using a style element in the head section<br>
+								External - by using an external CSS file<br>
+								An inline CSS is used to apply a unique style to a single HTML element<br>
+								An inline CSS uses the style attribute of an HTML element.<br>
+								An internal CSS is used to define a style for a single HTML page.<br>
+								An internal CSS is defined in the head section of an HTML page, within astyle element:<br>
+								An inline style may be used to apply a unique style for a single element.<br>
+								To use inline styles, add the style attribute to the relevant element.<br>													
+							</p>
+						</section>
+					</div><!--end div primary-->
 
-	<div class="main container_12">
-		<div class="primary grid_5">
-			<section class grid_2>
-				<h3>Styling HTML with CSS</h3>
-					<p>CSS stands for Cascading Style Sheets.<br>
-					CSS describes how HTML elements are to be displayed on screen, paper, or in other media.<br>
-					CSS saves a lot of work. It can control the layout of multiple web pages all at once.<br>
-					CSS can be added to HTML elements in 3 ways:<br>
-					Inline - by using the style attribute in HTML elements<br>
-					Internal - by using a style element in the head section<br>
-					External - by using an external CSS file<br>
-					An inline CSS is used to apply a unique style to a single HTML element<br>
-					An inline CSS uses the style attribute of an HTML element.<br>
-					An internal CSS is used to define a style for a single HTML page.<br>
-					An internal CSS is defined in the head section of an HTML page, within astyle element:<br>
-					An inline style may be used to apply a unique style for a single element.<br>
-					To use inline styles, add the style attribute to the relevant element.<br>													
-				</p>
-			</section>
+					<aside class="grid_6">
+
+						<h4 class="container_2">CSS Padding</h4>
+						<p>The CSS padding properties are used to generate space around an element's content, inside of any defined borders.With CSS, you have full control over the padding. There are properties for setting the padding for each side of an element (top, right, bottom, and left).</p><br>
+
+						<h4 class="container_2">CSS background properties:</h4>
+						<p>background-color,background-image,background-repeat,background-attachment,background-position</p><br>
+
+						<h4 class="container_2">CSS Height and Width</h4>
+						<p>The height and width properties are used to set the height and width of an element.<br>
+						The height and width can be set to auto (this is default. Means that the browser calculates the height and width), or be specified in length values, like px, cm, etc.,or in percent (%) of the containing block.</p><br>
+
+					</aside>
+				</div><!--end div main-->
+
+				<footer class="container_12">
+					<h6>More Information:<a href="#">https://www.w3schools.com/</a></h6>
+					<h6>Contact: <a href="#">HtmlCssTeam@gmail.com</a></h6>
+
+				</footer><!--end footer-->
+			</div>
+
 		</div>
-		<aside class="grid_6">
-			
-			<h4 class="container_2">CSS Padding</h4>
-			<p>The CSS padding properties are used to generate space around an element's content, inside of any defined borders.With CSS, you have full control over the padding. There are properties for setting the padding for each side of an element (top, right, bottom, and left).</p><br>
-
-			<h4 class="container_2">CSS background properties:</h4>
-			<p>background-color,background-image,background-repeat,background-attachment,background-position</p><br>
-
-			<h4 class="container_2">CSS Height and Width</h4>
-			<p>The height and width properties are used to set the height and width of an element.<br>
-			The height and width can be set to auto (this is default. Means that the browser calculates the height and width), or be specified in length values, like px, cm, etc.,or in percent (%) of the containing block.</p><br>
-
-		</aside>
-	</div>
-
-	<footer class="container_12">
-		<h6>More Information:<a href="#">https://www.w3schools.com/</a></h6>
-		<h6>Contact: <a href="#">HtmlCssTeam@gmail.com</a></h6>
-	
-	</footer>
-</div>
-</body>
-</html>
+		
+	</body>
+	</html>
 
 
 
